--- a/views/users/add.ejs
+++ b/views/users/add.ejs
@@ -16,6 +16,7 @@
 
 
 <form action="/users/add" method="POST">
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
     <label for="nombre">Nombre completo: </label>
     <input id="nombre" name="nombre" class="input is-primary" type="text" placeholder="Fernando Palomo Aguilar">
     <br><br>
