--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,6 +3,7 @@
 <h1 class="title"> Bienvenido </h1>
 
 <form action="/users/login" method="post">
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
     <label for="username">Nombre del usuario:</label>
     <input id="username" name="username" class="input is-primary" type="text" placeholder="Usuario">
     <br><br>
